# cairn

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
cairn/: __init__.py  config.py  main.py  manage.py
cairn/api/: __init__.py  app.py  auth.py  broadcast.py  deps.py
cairn/cli/: validate_procedures.py
cairn/db/: __init__.py  connections.py  ids.py  init.py
cairn/ingest/: __init__.py  parser.py  sigma.py  writer.py
cairn/integrations/: gitlab.py
cairn/jobs/: __init__.py  corroboration.py  promotion_scorer.py
cairn/kb/: sync_worker.py
cairn/models/: __init__.py  message.py  methodology.py
cairn/nlp/: __init__.py  entity_extractor.py  step_extractor.py
docs/: phase3.md  phase4.1.md  phase4.2.md  phase4.5.md  phase4.md  provisioning.md  sigma-ci.md
gitlab-ci/: procedure-validate.yml  sigma-validate.yml
tests/: conftest.py  test_chroma_sync_procedures.py  test_couchdb_sync.py  test_db_init_it.py  test_entity_extractor_it.py  test_kb_sync_worker.py  test_messages_delete_api.py  test_methodologies_kind_filter.py  test_migration_006.py  test_parser.py  test_procedure_model.py  test_promotion_review.py  test_promotion_scorer.py  test_promotions_dismiss.py  test_promotions_methodology_kind.py  test_skill_client.py  test_skill_client_methodology.py  test_skill_composer.py  test_skill_spec_cache.py  test_spacy_gate.py  test_step_extractor.py  test_validate_procedures_cli.py  test_vault_writer_couchdb.py  test_vault_writer_it.py  test_vault_writer_procedure.py
(+75 files in other folders)
